--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@cubeartisan/markdown",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "license": "AGPL-3.0-only",
-  "main": "dist",
+  "main": "dist/esm/index.js",
+  "browser": "dist/cjs/index.js",
   "type": "module",
   "sideEffects": false,
   "scripts": {
-    "build": "rm -rf dist && yarn build:mjs && yarn build:cjs",
-    "build:mjs": "babel src -d dist --out-file-extension .mjs --config-file ./babel.esm.cjs",
-    "build:cjs": "babel src -d dist --out-file-extension .cjs --config-file ./babel.cjs.cjs",
+    "build": "rm -rf dist && yarn build:esm && yarn build:cjs",
+    "build:esm": "babel src -d dist/esm --out-file-extension .js --config-file ./babel.esm.cjs",
+    "build:cjs": "babel src -d dist/cjs --out-file-extension .js --config-file ./babel.cjs.cjs",
     "lint": "eslint --quiet `yarn --silent list-files`",
     "lint:fix": "eslint --fix `yarn --silent list-files`",
     "lint:loud": "eslint `yarn --silent list-files`",
@@ -25,6 +26,7 @@
     "LICENSE.LESSER"
   ],
   "dependencies": {
+    "core-js": "^3.20.0",
     "micromark": "^2.10.1",
     "react-latex": "^2.0.0",
     "react-markdown": "^5.0.3",
