--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:fix": "sh -c 'eslint --fix `yarn run list-files`'",
     "lint:loud": "sh -c 'eslint `yarn run list-files`'",
     "list-files": "echo index.ts components plugins",
-    "prepare": "install-peers",
+    "prepare": "install-peerdeps @cubeartisan/markdown --dev -Y",
     "test": "echo no tests yet",
     "test:loud": "echo no tests yet",
     "test:watch": "echo no tests yet",
@@ -30,7 +30,6 @@
     }
   },
   "dependencies": {
-    "install-peers": "^1.0.4",
     "micromark": "^3.0.10",
     "react-latex": "^2.0.0",
     "react-markdown": "^8.0.3",
@@ -68,7 +67,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "install-peers-cli": "^2.2.0",
+    "install-peerdeps": "^3.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "vite": "^3.0.2"
