feat(types): Upgrade to react 18 and typescript.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,6 +4,8 @@ changesetBaseRefs:
 
 enableMessageNames: false
 
+nodeLinker: node-modules
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
