--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -57,8 +57,12 @@ rules:
     - forbid: ['>', '"', '}']
   react-hooks/rules-of-hooks: error
   react-hooks/exhaustive-deps: error
-  react/jsx-uses-react: error
-  react/react-in-jsx-scope: error
+  react/jsx-uses-react: off
+  react/react-in-jsx-scope: off
+  react/function-component-definition:
+    - error
+    - namedComponents: arrow-function
+      unnamedComponents: arrow-function
   import/no-commonjs: error
   no-restricted-imports:
     - error
