--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "parser": "flow",
+  "parser": "typescript",
   "tabWidth": 2,
   "semi": true,
   "arrowParens": "always",
