--- a/package.json
+++ b/package.json
@@ -1,60 +1,24 @@
 {
-  "name": "@cubeartisan/markdown",
-  "version": "1.1.0",
+  "private": true,
   "license": "AGPL-3.0-only",
-  "type": "module",
-  "sideEffects": false,
+  "workspaces": [
+    "markdown"
+  ],
   "scripts": {
-    "lint": "sh -c 'eslint --quiet `yarn run list-files`'",
-    "lint:fix": "sh -c 'eslint --fix `yarn run list-files`'",
-    "lint:loud": "sh -c 'eslint `yarn run list-files`'",
-    "list-files": "git ls-files '*.ts', '*.tsx'",
-    "prepare": "install-peerdeps @cubeartisan/markdown --dev -Y",
-    "test": "echo no tests yet",
-    "test:loud": "echo no tests yet",
-    "test:watch": "echo no tests yet",
+    "lint": "yarn workspace @cubeartisan/markdown lint",
+    "lint-fix": "yarn workspace @cubeartisan/markdown lint-fix",
+    "lint-loud": "yarn workspace @cubeartisan/markdown lint-loud",
+    "list-files": "yarn workspace @cubeartisan/markdown list-files",
+    "test": "yarn workspace @cubeartisan/markdown test",
     "build": "tsc && vite build"
   },
-  "files": [
-    "dist",
-    "LICENSE",
-    "LICENSE.CUBECOBRA",
-    "LICENSE.LESSER"
-  ],
-  "main": "./dist/@cubeartisan/markdown.umd.cjs",
-  "module": "./dist/@cubeartisan/markdown.js",
-  "exports": {
-    ".": {
-      "import": "./dist/my-lib.js",
-      "require": "./dist/my-lib.umd.cjs"
-    }
-  },
   "dependencies": {
-    "micromark": "^3.0.10",
-    "react-latex": "^2.0.0",
-    "react-markdown": "^8.0.3",
-    "react-syntax-highlighter": "^15.5.0",
-    "remark-autolink-headings": "^7.0.1",
-    "remark-breaks": "^3.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "remark-parse": "^10.0.1",
-    "remark-slug": "^7.0.1",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.0"
-  },
-  "peerDependencies": {
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "prop-types": "^15.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-is": "^18.0.0"
+    "@cubeartisan/markdown": "^1.1.0"
   },
   "devDependencies": {
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
+    "@emotion/react": "^11.9.3",
     "@types/react": "^18.0.15",
+    "@types/rollup-plugin-peer-deps-external": "^2",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vitejs/plugin-react": "^2.0.0",
@@ -69,12 +33,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "install-peerdeps": "^3.0.3",
     "prettier": "^2.7.1",
-    "prop-types": "^15.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-is": "^18.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^4.7.4",
     "vite": "^3.0.2",
     "vite-plugin-checker": "^0.4.9"
