--- a/markdown/package.json
+++ b/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cubeartisan/markdown",
-  "version": "1.1.0",
+  "version": "1.1.5",
   "license": "AGPL-3.0-only",
   "type": "module",
   "sideEffects": false,
@@ -19,12 +19,13 @@
     "LICENSE.CUBECOBRA",
     "LICENSE.LESSER"
   ],
-  "main": "./dist/@cubeartisan/markdown.umd.cjs",
-  "module": "./dist/@cubeartisan/markdown.mjs",
+  "main": "./dist/cubeartisan-markdown.cjs",
+  "module": "./dist/cubeartisan-markdown.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/@cubeartisan/markdown.mjs",
-      "require": "./dist/@cubeartisan/markdown.umd.cjs"
+      "import": "./dist/cubeartisan-markdown.mjs",
+      "require": "./dist/cubeartisan-markdown.cjs"
     }
   },
   "dependencies": {
@@ -48,17 +49,22 @@
     "unist-util-visit": "^4.1.0"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "prop-types": "^15.0.0",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "@types/mdast": "^3",
     "@types/react": "^18.0.15",
+    "@types/react-dom": "^18",
     "@types/react-latex": "^2.0.0",
     "@types/react-syntax-highlighter": "^15.5.3",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
@@ -78,8 +84,7 @@
     "prettier": "^2.7.1",
     "prop-types": "^15.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-is": "^18.0.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.2"
   }
