--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "lint-loud": "yarn workspace @cubeartisan/markdown lint-loud",
     "list-files": "yarn workspace @cubeartisan/markdown list-files",
     "test": "yarn workspace @cubeartisan/markdown test",
-    "build": "tsc && vite build"
+    "build": " vite build && tsc --emitDeclarationOnly && tsc-alias"
   },
   "dependencies": {
     "@cubeartisan/markdown": "^1.1.0"
   },
   "devDependencies": {
-    "@emotion/react": "^11.9.3",
     "@types/react": "^18.0.15",
     "@types/rollup-plugin-peer-deps-external": "^2",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
@@ -33,8 +32,11 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "rollup": "^2.77.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tsc-alias": "^1.7.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.2",
     "vite-plugin-checker": "^0.4.9"
