--- a/markdown/package.json
+++ b/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cubeartisan/markdown",
-  "version": "1.2.0",
+  "version": "1.3.5",
   "license": "AGPL-3.0-only",
   "type": "module",
   "sideEffects": false,
@@ -25,19 +25,22 @@
   "exports": {
     ".": {
       "import": "./dist/cubeartisan-markdown.mjs",
-      "require": "./dist/cubeartisan-markdown.cjs"
+      "require": "./dist/cubeartisan-markdown.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "dependencies": {
+    "core-js": "^3.25.0",
     "mdast": "^3.0.0",
     "mdast-util-from-markdown": "^1.2.0",
+    "mdast-util-to-hast": "^12.2.1",
     "micromark": "^3.0.10",
     "micromark-factory-space": "^1.0.0",
     "micromark-util-character": "^1.1.0",
     "micromark-util-chunked": "^1.0.0",
     "micromark-util-symbol": "^1.0.1",
     "react-latex": "^2.0.0",
-    "react-markdown": "^8.0.3",
+    "react-markdown": "^8.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "remark-autolink-headings": "^7.0.1",
     "remark-breaks": "^3.0.2",
